[gd_scene load_steps=3 format=3 uid="uid://cfqyitjuj005f"]

[ext_resource type="Script" uid="uid://b14qeaxfhfyjy" path="res://options/options.gd" id="1_10ehl"]
[ext_resource type="Texture2D" uid="uid://ca4elfn76obea" path="res://assets/board.png" id="2_63j6r"]

[node name="Options" type="CanvasLayer"]
script = ExtResource("1_10ehl")

[node name="OptsContainer" type="HBoxContainer" parent="."]
unique_name_in_owner = true
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20
alignment = 1

[node name="CenterContainer" type="CenterContainer" parent="OptsContainer"]
layout_mode = 2

[node name="TextureRect2" type="TextureRect" parent="OptsContainer/CenterContainer"]
layout_mode = 2
texture = ExtResource("2_63j6r")

[node name="Label" type="Label" parent="OptsContainer/CenterContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_font_sizes/font_size = 128
text = "Options"

[node name="CenterContainer2" type="CenterContainer" parent="OptsContainer"]
layout_mode = 2

[node name="VBoxContainer5" type="VBoxContainer" parent="OptsContainer/CenterContainer2"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Button2" type="Button" parent="OptsContainer/CenterContainer2/VBoxContainer5"]
layout_mode = 2
text = "Back"

[node name="Button" type="Button" parent="OptsContainer/CenterContainer2/VBoxContainer5"]
layout_mode = 2
text = "Reset"

[node name="VBoxContainer" type="VBoxContainer" parent="OptsContainer/CenterContainer2/VBoxContainer5"]
layout_mode = 2
size_flags_stretch_ratio = 0.0

[node name="PCLabel" type="Label" parent="OptsContainer/CenterContainer2/VBoxContainer5/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Piece Count"

[node name="PieceCount" type="HSlider" parent="OptsContainer/CenterContainer2/VBoxContainer5/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
min_value = 1.0
max_value = 30.0
value = 1.0
tick_count = 25
ticks_on_borders = true

[node name="VBoxContainer4" type="VBoxContainer" parent="OptsContainer/CenterContainer2/VBoxContainer5"]
layout_mode = 2
size_flags_stretch_ratio = 0.0

[node name="ScoreLabel" type="Label" parent="OptsContainer/CenterContainer2/VBoxContainer5/VBoxContainer4"]
unique_name_in_owner = true
layout_mode = 2
text = "Score to Win"

[node name="Score" type="HSlider" parent="OptsContainer/CenterContainer2/VBoxContainer5/VBoxContainer4"]
unique_name_in_owner = true
layout_mode = 2
min_value = 1.0
value = 1.0
tick_count = 25
ticks_on_borders = true

[node name="VBoxContainer2" type="VBoxContainer" parent="OptsContainer/CenterContainer2/VBoxContainer5"]
layout_mode = 2
size_flags_stretch_ratio = 0.0

[node name="WCLabel" type="Label" parent="OptsContainer/CenterContainer2/VBoxContainer5/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
text = "White Count"

[node name="WhiteCount" type="HSlider" parent="OptsContainer/CenterContainer2/VBoxContainer5/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
min_value = 1.0
max_value = 10.0
value = 1.0
tick_count = 10
ticks_on_borders = true

[node name="VBoxContainer3" type="VBoxContainer" parent="OptsContainer/CenterContainer2/VBoxContainer5"]
layout_mode = 2
size_flags_stretch_ratio = 0.0

[node name="BCLabel" type="Label" parent="OptsContainer/CenterContainer2/VBoxContainer5/VBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2
text = "Black Count"

[node name="BlackCount" type="HSlider" parent="OptsContainer/CenterContainer2/VBoxContainer5/VBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2
min_value = 1.0
max_value = 10.0
value = 1.0
tick_count = 10
ticks_on_borders = true

[node name="VBoxContainer5" type="VBoxContainer" parent="OptsContainer/CenterContainer2/VBoxContainer5"]
layout_mode = 2
size_flags_stretch_ratio = 0.0

[node name="BottomLandName" type="Label" parent="OptsContainer/CenterContainer2/VBoxContainer5/VBoxContainer5"]
layout_mode = 2
text = "Player 1"

[node name="BottomName" type="TextEdit" parent="OptsContainer/CenterContainer2/VBoxContainer5/VBoxContainer5"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 100)
layout_mode = 2

[node name="VBoxContainer6" type="VBoxContainer" parent="OptsContainer/CenterContainer2/VBoxContainer5"]
layout_mode = 2
size_flags_stretch_ratio = 0.0

[node name="RightLandName" type="Label" parent="OptsContainer/CenterContainer2/VBoxContainer5/VBoxContainer6"]
layout_mode = 2
text = "Player 2"

[node name="RightName" type="TextEdit" parent="OptsContainer/CenterContainer2/VBoxContainer5/VBoxContainer6"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 100)
layout_mode = 2

[node name="VBoxContainer7" type="VBoxContainer" parent="OptsContainer/CenterContainer2/VBoxContainer5"]
layout_mode = 2
size_flags_stretch_ratio = 0.0

[node name="TopLandName" type="Label" parent="OptsContainer/CenterContainer2/VBoxContainer5/VBoxContainer7"]
layout_mode = 2
text = "Player 3"

[node name="TopName" type="TextEdit" parent="OptsContainer/CenterContainer2/VBoxContainer5/VBoxContainer7"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 100)
layout_mode = 2

[node name="VBoxContainer8" type="VBoxContainer" parent="OptsContainer/CenterContainer2/VBoxContainer5"]
layout_mode = 2
size_flags_stretch_ratio = 0.0

[node name="LeftLandName" type="Label" parent="OptsContainer/CenterContainer2/VBoxContainer5/VBoxContainer8"]
layout_mode = 2
text = "Player 4"

[node name="LeftName" type="TextEdit" parent="OptsContainer/CenterContainer2/VBoxContainer5/VBoxContainer8"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 100)
layout_mode = 2

[connection signal="pressed" from="OptsContainer/CenterContainer2/VBoxContainer5/Button2" to="." method="_on_button_pressed"]
[connection signal="pressed" from="OptsContainer/CenterContainer2/VBoxContainer5/Button" to="." method="_on_reset_pressed"]
[connection signal="value_changed" from="OptsContainer/CenterContainer2/VBoxContainer5/VBoxContainer/PieceCount" to="." method="_on_piece_count_value_changed"]
[connection signal="value_changed" from="OptsContainer/CenterContainer2/VBoxContainer5/VBoxContainer4/Score" to="." method="_on_score_value_changed"]
[connection signal="value_changed" from="OptsContainer/CenterContainer2/VBoxContainer5/VBoxContainer2/WhiteCount" to="." method="_on_white_count_value_changed"]
[connection signal="value_changed" from="OptsContainer/CenterContainer2/VBoxContainer5/VBoxContainer3/BlackCount" to="." method="_on_black_count_value_changed"]
[connection signal="text_changed" from="OptsContainer/CenterContainer2/VBoxContainer5/VBoxContainer5/BottomName" to="." method="_on_bottom_name_text_changed"]
[connection signal="text_changed" from="OptsContainer/CenterContainer2/VBoxContainer5/VBoxContainer6/RightName" to="." method="_on_right_name_text_changed"]
[connection signal="text_changed" from="OptsContainer/CenterContainer2/VBoxContainer5/VBoxContainer7/TopName" to="." method="_on_top_name_text_changed"]
[connection signal="text_changed" from="OptsContainer/CenterContainer2/VBoxContainer5/VBoxContainer8/LeftName" to="." method="_on_left_name_text_changed"]
